Criação das interfaces e ajustes nos nomes e tipos de aquivos.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,8 +16,11 @@
     "noUnusedParameters": true,
     "downlevelIteration": true
   },
+  "files": [
+    "src/knexfile.ts"
+  ],
   "include": [
-    "src/**/*"
+    "./src/**/*"
   ],
   "exclude": [
     "node_modules",
