--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "commonjs",  
-    "outDir": "./dist",
+    "module": "ESNext",
+    "outDir": "./src/dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
@@ -11,13 +11,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "downlevelIteration": true
   },
   "files": [
-    "src/knexfile.ts"
+    "src/server.ts"
   ],
   "include": [
     "./src/**/*"
