ajustes nas rotas

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,13 @@
     "start": "node dist/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Karla Kirchhoff",
   "license": "ISC",
-  "description": "",
+  "description": "Sistema de Agendamento de Exames Médicos da Polícia Científica do Paraná",
   "dependencies": {
     "core-js": "^3.44.0",
     "express": "^5.1.0",
-    "knex": "^3.1.0",
-    "regenerator-runtime": "^0.14.1",
-    "sqlite3": "^5.1.7"
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
