--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.11",
     "cors": "^2.8.5",
+    "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
