--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.2.0",
     "@mui/styled-engine-sc": "^7.2.0",
+    "@mui/x-data-grid": "^8.9.2",
     "@mui/x-date-pickers": "^8.9.0",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
